--- a/README
+++ b/README
@@ -16,3 +16,5 @@ Commandments of Github
 			git merge new_branch
 
 5. Run git status often. If you have error, ask for help. 
+
+HUMAN.TXT requird 
